complete Additional Demo Page, update Demo Page

--- a/deploy/UI/about_us/index.html
+++ b/deploy/UI/about_us/index.html
@@ -114,7 +114,7 @@
                 <div class="row align-items-center mb-5">
                     <div class="col-lg-6 order-2 order-lg-1"><i
                             class="fa fa-caret-square-o-right fa-3x mb-3 text-primary"></i>
-                        <h2 class="fw-light">Demo</h2>
+                        <h2 class="font-weight-light">Demo</h2>
                         <p class="font-italic text-muted mb-4">This page includes basic functions such as uploading
                             images, processing and downloading images. In addition, it also provides photo samples of
                             different models and offers options to change the model according to your preferences.
