complete Examples page

--- a/deploy/UI/example/index.html
+++ b/deploy/UI/example/index.html
@@ -284,6 +284,200 @@
             </div>
         </div>
     </div>
+    <div class="b-example-divider" style="background-color: white;"></div>
+    <div class="container px-4 py-5">
+        <h2 class="pb-2 fw-bold border-bottom">Sample photos processed on HAT-S model for Vietnam Landscape</h2>
+        <br>
+        <div class="row mb-3 text-center">
+            <div class="col-md-6 themed-grid-col">
+                <p class="h3">upscale x4</p>
+                <div class="block block--comparison" mv-app="slider" storage="local" mv-mode="edit">
+                    <div class="block__image" style="--range: [slide]%;">
+                        <div class="block__img block__img--first">
+                            <img src="../comparison/images/Visualization/VietnamLandscape/SRx4_0070.png"
+                                class="img-cover">
+                        </div>
+
+                        <div class="block__img block__img--last">
+                            <img src="../comparison/images/Visualization/VietnamLandscape/LR-0070.png" class="img-cover">
+                        </div>
+
+                        <input class="block__slide" type="range" min="0" max="100" step="0.05" value="50"
+                            property="slide">
+                    </div>
+                </div>
+                <div class="container-sm themed-container text-end">
+                    <button type="button" class="btn btn-success"
+                        onclick="downloadImages(['../comparison/images/Visualization/VietnamLandscape/SRx4_0070.png', '../comparison/images/Visualization/VietnamLandscape/LR-0070.png'])">Download</button>
+                </div>
+            </div>
+            <div class="col-md-6 themed-grid-col">
+                <p class="h3">upscale x8</p>
+                <div class="block block--comparison" mv-app="slider" storage="local" mv-mode="edit">
+                    <div class="block__image" style="--range: [slide]%;">
+                        <div class="block__img block__img--first">
+                            <img src="../comparison/images/Visualization/VietnamLandscape/SRx8_0070.png"
+                                class="img-cover">
+                        </div>
+
+                        <div class="block__img block__img--last">
+                            <img src="../comparison/images/Visualization/VietnamLandscape/LRx8-0070.png" class="img-cover">
+                        </div>
+
+                        <input class="block__slide" type="range" min="0" max="100" step="0.05" value="50"
+                            property="slide">
+                    </div>
+                </div>
+                <div class="container-sm themed-container text-end">
+                    <button type="button" class="btn btn-success"
+                        onclick="downloadImages(['../comparison/images/Visualization/VietnamLandscape/SRx8_0070.png', '../comparison/images/Visualization/VietnamLandscape/LRx8-0070.png'])">Download</button>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-3 text-center">
+            <div class="col-md-6 themed-grid-col">
+                <p class="h3">upscale x4</p>
+                <div class="block block--comparison" mv-app="slider" storage="local" mv-mode="edit">
+                    <div class="block__image" style="--range: [slide]%;">
+                        <div class="block__img block__img--first">
+                            <img src="../comparison/images/Visualization/VietnamLandscape/SRx4_0074.png"
+                                class="img-cover">
+                        </div>
+
+                        <div class="block__img block__img--last">
+                            <img src="../comparison/images/Visualization/VietnamLandscape/LR-0074.png" class="img-cover">
+                        </div>
+
+                        <input class="block__slide" type="range" min="0" max="100" step="0.05" value="50"
+                            property="slide">
+                    </div>
+                </div>
+                <div class="container-sm themed-container text-end">
+                    <button type="button" class="btn btn-success"
+                        onclick="downloadImages(['../comparison/images/Visualization/VietnamLandscape/SRx4_0074.png', '../comparison/images/Visualization/VietnamLandscape/LR-0074.png'])">Download</button>
+                </div>
+            </div>
+            <div class="col-md-6 themed-grid-col">
+                <p class="h3">upscale x8</p>
+                <div class="block block--comparison" mv-app="slider" storage="local" mv-mode="edit">
+                    <div class="block__image" style="--range: [slide]%;">
+                        <div class="block__img block__img--first">
+                            <img src="../comparison/images/Visualization/VietnamLandscape/SRx8_0074.png"
+                                class="img-cover">
+                        </div>
+
+                        <div class="block__img block__img--last">
+                            <img src="../comparison/images/Visualization/VietnamLandscape/LRx8-0074.png" class="img-cover">
+                        </div>
+
+                        <input class="block__slide" type="range" min="0" max="100" step="0.05" value="50"
+                            property="slide">
+                    </div>
+                </div>
+                <div class="container-sm themed-container text-end">
+                    <button type="button" class="btn btn-success"
+                        onclick="downloadImages(['../comparison/images/Visualization/VietnamLandscape/SRx8_0074.png', '../comparison/images/Visualization/VietnamLandscape/LRx8-0074.png'])">Download</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="b-example-divider" style="background-color: white;"></div>
+    <div class="container px-4 py-5">
+        <h2 class="pb-2 fw-bold border-bottom">Sample photos processed on HAT-S models denoise Human Faces.</h2>
+        <br>
+        <div class="row mb-3 text-center">
+            <div class="col-md-6 themed-grid-col">
+                <p class="h3">upscale x4</p>
+                <div class="block block--comparison" mv-app="slider" storage="local" mv-mode="edit">
+                    <div class="block__image" style="--range: [slide]%;">
+                        <div class="block__img block__img--first">
+                            <img src="../comparison/images/Visualization/HumanFaces/SRx4_0032.png"
+                                class="img-cover">
+                        </div>
+
+                        <div class="block__img block__img--last">
+                            <img src="../comparison/images/Visualization/HumanFaces/LR-0032.png" class="img-cover">
+                        </div>
+
+                        <input class="block__slide" type="range" min="0" max="100" step="0.05" value="50"
+                            property="slide">
+                    </div>
+                </div>
+                <div class="container-sm themed-container text-end">
+                    <button type="button" class="btn btn-success"
+                        onclick="downloadImages(['../comparison/images/Visualization/HumanFaces/SRx4_0032.png', '../comparison/images/Visualization/HumanFaces/LR-0032.png'])">Download</button>
+                </div>
+            </div>
+            <div class="col-md-6 themed-grid-col">
+                <p class="h3">upscale x8</p>
+                <div class="block block--comparison" mv-app="slider" storage="local" mv-mode="edit">
+                    <div class="block__image" style="--range: [slide]%;">
+                        <div class="block__img block__img--first">
+                            <img src="../comparison/images/Visualization/HumanFaces/SRx8_0032.png"
+                                class="img-cover">
+                        </div>
+
+                        <div class="block__img block__img--last">
+                            <img src="../comparison/images/Visualization/HumanFaces/LRx8-0032.png" class="img-cover">
+                        </div>
+
+                        <input class="block__slide" type="range" min="0" max="100" step="0.05" value="50"
+                            property="slide">
+                    </div>
+                </div>
+                <div class="container-sm themed-container text-end">
+                    <button type="button" class="btn btn-success"
+                        onclick="downloadImages(['../comparison/images/Visualization/HumanFaces/SRx8_0032.png', '../comparison/images/Visualization/HumanFaces/LRx8-0032.png'])">Download</button>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-3 text-center">
+            <div class="col-md-6 themed-grid-col">
+                <p class="h3">upscale x4</p>
+                <div class="block block--comparison" mv-app="slider" storage="local" mv-mode="edit">
+                    <div class="block__image" style="--range: [slide]%;">
+                        <div class="block__img block__img--first">
+                            <img src="../comparison/images/Visualization/HumanFaces/SRx4_0256.png"
+                                class="img-cover">
+                        </div>
+
+                        <div class="block__img block__img--last">
+                            <img src="../comparison/images/Visualization/HumanFaces/LR-0256.png" class="img-cover">
+                        </div>
+
+                        <input class="block__slide" type="range" min="0" max="100" step="0.05" value="50"
+                            property="slide">
+                    </div>
+                </div>
+                <div class="container-sm themed-container text-end">
+                    <button type="button" class="btn btn-success"
+                        onclick="downloadImages(['../comparison/images/Visualization/HumanFaces/SRx4_0256.png', '../comparison/images/Visualization/HumanFaces/LR-0256.png'])">Download</button>
+                </div>
+            </div>
+            <div class="col-md-6 themed-grid-col">
+                <p class="h3">upscale x8</p>
+                <div class="block block--comparison" mv-app="slider" storage="local" mv-mode="edit">
+                    <div class="block__image" style="--range: [slide]%;">
+                        <div class="block__img block__img--first">
+                            <img src="../comparison/images/Visualization/HumanFaces/SRx8_0256.png"
+                                class="img-cover">
+                        </div>
+
+                        <div class="block__img block__img--last">
+                            <img src="../comparison/images/Visualization/HumanFaces/LRx8-0256.png" class="img-cover">
+                        </div>
+
+                        <input class="block__slide" type="range" min="0" max="100" step="0.05" value="50"
+                            property="slide">
+                    </div>
+                </div>
+                <div class="container-sm themed-container text-end">
+                    <button type="button" class="btn btn-success"
+                        onclick="downloadImages(['../comparison/images/Visualization/HumanFaces/SRx8_0256.png', '../comparison/images/Visualization/HumanFaces/LRx8-0256.png'])">Download</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="bootstrap" viewBox="0 0 118 94">
             <title>Bootstrap</title>
